# wp-duprefs

./: wp-duprefs.cabal
src/: wp-duprefs.hs
src/Control/Lens/Text/: Extras.hs
src/Network/Mediawiki/: API.hs
src/Network/Mediawiki/API/: Lowlevel.hs
